--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
 - customized-script-remediation_v1alpha1_customizedscriptremediation.yaml
+- customized-script-remediation_v1alpha1_customizedscriptremediationtemplate.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
