--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/customized-script-remediation.medik8s.io_customizedscriptremediations.yaml
 - bases/customized-script-remediation.medik8s.io_customizedscriptremediationtemplates.yaml
+- bases/customized-script-remediation.medik8s.io_customizedscriptremediationconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_customizedscriptremediations.yaml
 #- patches/webhook_in_customizedscriptremediationtemplates.yaml
+#- patches/webhook_in_customizedscriptremediationconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_customizedscriptremediations.yaml
 #- patches/cainjection_in_customizedscriptremediationtemplates.yaml
+#- patches/cainjection_in_customizedscriptremediationconfigs.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
