--- a/bundle/manifests/customized-script-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-script-remediation.clusterserviceversion.yaml
@@ -225,7 +225,7 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
-                image: controller:latest
+                image: quay.io/mshitrit/customized-script-remediation-operator:latest
                 livenessProbe:
                   httpGet:
                     path: /healthz
