--- a/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediationconfigs.yaml
+++ b/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediationconfigs.yaml
@@ -1,24 +1,23 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
+    controller-gen.kubebuilder.io/version: v0.13.0
   creationTimestamp: null
-  name: customizedscriptremediations.customized-script-remediation.medik8s.io
+  name: customizeduserremediationconfigs.customized-user-remediation.medik8s.io
 spec:
-  group: customized-script-remediation.medik8s.io
+  group: customized-user-remediation.medik8s.io
   names:
-    kind: CustomizedScriptRemediation
-    listKind: CustomizedScriptRemediationList
-    plural: customizedscriptremediations
-    singular: customizedscriptremediation
+    kind: CustomizedUserRemediationConfig
+    listKind: CustomizedUserRemediationConfigList
+    plural: customizeduserremediationconfigs
+    singular: customizeduserremediationconfig
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: CustomizedScriptRemediation is the Schema for the customizedscriptremediations
+        description: CustomizedUserRemediationConfig is the Schema for the customizeduserremediationconfigs
           API
         properties:
           apiVersion:
@@ -34,20 +33,26 @@ spec:
           metadata:
             type: object
           spec:
-            description: CustomizedScriptRemediationSpec defines the desired state
-              of CustomizedScriptRemediation
+            description: CustomizedUserRemediationConfigSpec defines the desired state
+              of CustomizedUserRemediationConfig
             properties:
-              foo:
-                description: Foo is an example field of CustomizedScriptRemediation.
-                  Edit customizedscriptremediation_types.go to remove/update
+              script:
+                description: Script is a user defined bash script to be run in case
+                  of remediation.
                 type: string
             type: object
           status:
-            description: CustomizedScriptRemediationStatus defines the observed state
-              of CustomizedScriptRemediation
+            description: CustomizedUserRemediationConfigStatus defines the observed
+              state of CustomizedUserRemediationConfig
             type: object
         type: object
     served: true
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: null
+  storedVersions: null
