--- a/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediations.yaml
+++ b/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediations.yaml
@@ -2,22 +2,22 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
+    controller-gen.kubebuilder.io/version: v0.13.0
   creationTimestamp: null
-  name: customizedscriptremediations.customized-script-remediation.medik8s.io
+  name: customizeduserremediations.customized-user-remediation.medik8s.io
 spec:
-  group: customized-script-remediation.medik8s.io
+  group: customized-user-remediation.medik8s.io
   names:
-    kind: CustomizedScriptRemediation
-    listKind: CustomizedScriptRemediationList
-    plural: customizedscriptremediations
-    singular: customizedscriptremediation
+    kind: CustomizedUserRemediation
+    listKind: CustomizedUserRemediationList
+    plural: customizeduserremediations
+    singular: customizeduserremediation
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: CustomizedScriptRemediation is the Schema for the customizedscriptremediations
+        description: CustomizedUserRemediation is the Schema for the customizeduserremediations
           API
         properties:
           apiVersion:
@@ -33,17 +33,17 @@ spec:
           metadata:
             type: object
           spec:
-            description: CustomizedScriptRemediationSpec defines the desired state
-              of CustomizedScriptRemediation
+            description: CustomizedUserRemediationSpec defines the desired state of
+              CustomizedUserRemediation
             properties:
               foo:
-                description: Foo is an example field of CustomizedScriptRemediation.
-                  Edit customizedscriptremediation_types.go to remove/update
+                description: Foo is an example field of CustomizedUserRemediation.
+                  Edit customizeduserremediation_types.go to remove/update
                 type: string
             type: object
           status:
-            description: CustomizedScriptRemediationStatus defines the observed state
-              of CustomizedScriptRemediation
+            description: CustomizedUserRemediationStatus defines the observed state
+              of CustomizedUserRemediation
             type: object
         type: object
     served: true
