--- a/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediationtemplates.yaml
+++ b/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediationtemplates.yaml
@@ -1,24 +1,23 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
+    controller-gen.kubebuilder.io/version: v0.13.0
   creationTimestamp: null
-  name: customizedscriptremediationtemplates.customized-script-remediation.medik8s.io
+  name: customizeduserremediationtemplates.customized-user-remediation.medik8s.io
 spec:
-  group: customized-script-remediation.medik8s.io
+  group: customized-user-remediation.medik8s.io
   names:
-    kind: CustomizedScriptRemediationTemplate
-    listKind: CustomizedScriptRemediationTemplateList
-    plural: customizedscriptremediationtemplates
-    singular: customizedscriptremediationtemplate
+    kind: CustomizedUserRemediationTemplate
+    listKind: CustomizedUserRemediationTemplateList
+    plural: customizeduserremediationtemplates
+    singular: customizeduserremediationtemplate
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: CustomizedScriptRemediationTemplate is the Schema for the customizedscriptremediationtemplates
+        description: CustomizedUserRemediationTemplate is the Schema for the customizeduserremediationtemplates
           API
         properties:
           apiVersion:
@@ -34,19 +33,19 @@ spec:
           metadata:
             type: object
           spec:
-            description: CustomizedScriptRemediationTemplateSpec defines the desired
-              state of CustomizedScriptRemediationTemplate
+            description: CustomizedUserRemediationTemplateSpec defines the desired
+              state of CustomizedUserRemediationTemplate
             properties:
               template:
-                description: Template defines the desired state of CustomizedScriptRemediationTemplate
+                description: Template defines the desired state of CustomizedUserRemediationTemplate
                 properties:
                   spec:
-                    description: CustomizedScriptRemediationSpec defines the desired
-                      state of CustomizedScriptRemediation
+                    description: CustomizedUserRemediationSpec defines the desired
+                      state of CustomizedUserRemediation
                     properties:
                       foo:
-                        description: Foo is an example field of CustomizedScriptRemediation.
-                          Edit customizedscriptremediation_types.go to remove/update
+                        description: Foo is an example field of CustomizedUserRemediation.
+                          Edit customizeduserremediation_types.go to remove/update
                         type: string
                     type: object
                 required:
@@ -56,11 +55,17 @@ spec:
             - template
             type: object
           status:
-            description: CustomizedScriptRemediationTemplateStatus defines the observed
-              state of CustomizedScriptRemediationTemplate
+            description: CustomizedUserRemediationTemplateStatus defines the observed
+              state of CustomizedUserRemediationTemplate
             type: object
         type: object
     served: true
     storage: true
     subresources:
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: null
+  storedVersions: null
