--- a/config/crd/bases/customized-user-remediation.medik8s.io_customizeduserremediationconfigs.yaml
+++ b/config/crd/bases/customized-user-remediation.medik8s.io_customizeduserremediationconfigs.yaml
@@ -3,22 +3,21 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
-  creationTimestamp: null
-  name: customizedscriptremediationconfigs.customized-script-remediation.medik8s.io
+    controller-gen.kubebuilder.io/version: v0.13.0
+  name: customizeduserremediationconfigs.customized-user-remediation.medik8s.io
 spec:
-  group: customized-script-remediation.medik8s.io
+  group: customized-user-remediation.medik8s.io
   names:
-    kind: CustomizedScriptRemediationConfig
-    listKind: CustomizedScriptRemediationConfigList
-    plural: customizedscriptremediationconfigs
-    singular: customizedscriptremediationconfig
+    kind: CustomizedUserRemediationConfig
+    listKind: CustomizedUserRemediationConfigList
+    plural: customizeduserremediationconfigs
+    singular: customizeduserremediationconfig
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: CustomizedScriptRemediationConfig is the Schema for the customizedscriptremediationconfigs
+        description: CustomizedUserRemediationConfig is the Schema for the customizeduserremediationconfigs
           API
         properties:
           apiVersion:
@@ -34,8 +33,8 @@ spec:
           metadata:
             type: object
           spec:
-            description: CustomizedScriptRemediationConfigSpec defines the desired
-              state of CustomizedScriptRemediationConfig
+            description: CustomizedUserRemediationConfigSpec defines the desired state
+              of CustomizedUserRemediationConfig
             properties:
               script:
                 description: Script is a user defined bash script to be run in case
@@ -43,8 +42,8 @@ spec:
                 type: string
             type: object
           status:
-            description: CustomizedScriptRemediationConfigStatus defines the observed
-              state of CustomizedScriptRemediationConfig
+            description: CustomizedUserRemediationConfigStatus defines the observed
+              state of CustomizedUserRemediationConfig
             type: object
         type: object
     served: true
