--- a/config/crd/bases/customized-user-remediation.medik8s.io_customizeduserremediations.yaml
+++ b/config/crd/bases/customized-user-remediation.medik8s.io_customizeduserremediations.yaml
@@ -1,23 +1,23 @@
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
-  creationTimestamp: null
-  name: customizedscriptremediationconfigs.customized-script-remediation.medik8s.io
+    controller-gen.kubebuilder.io/version: v0.13.0
+  name: customizeduserremediations.customized-user-remediation.medik8s.io
 spec:
-  group: customized-script-remediation.medik8s.io
+  group: customized-user-remediation.medik8s.io
   names:
-    kind: CustomizedScriptRemediationConfig
-    listKind: CustomizedScriptRemediationConfigList
-    plural: customizedscriptremediationconfigs
-    singular: customizedscriptremediationconfig
+    kind: CustomizedUserRemediation
+    listKind: CustomizedUserRemediationList
+    plural: customizeduserremediations
+    singular: customizeduserremediation
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: CustomizedScriptRemediationConfig is the Schema for the customizedscriptremediationconfigs
+        description: CustomizedUserRemediation is the Schema for the customizeduserremediations
           API
         properties:
           apiVersion:
@@ -33,26 +33,20 @@ spec:
           metadata:
             type: object
           spec:
-            description: CustomizedScriptRemediationConfigSpec defines the desired
-              state of CustomizedScriptRemediationConfig
+            description: CustomizedUserRemediationSpec defines the desired state of
+              CustomizedUserRemediation
             properties:
-              script:
-                description: Script is a user defined bash script to be run in case
-                  of remediation.
+              foo:
+                description: Foo is an example field of CustomizedUserRemediation.
+                  Edit customizeduserremediation_types.go to remove/update
                 type: string
             type: object
           status:
-            description: CustomizedScriptRemediationConfigStatus defines the observed
-              state of CustomizedScriptRemediationConfig
+            description: CustomizedUserRemediationStatus defines the observed state
+              of CustomizedUserRemediation
             type: object
         type: object
     served: true
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: null
-  storedVersions: null
