fix some leftover name changes adding some logs Signed-off-by: Michael Shitrit <mshitrit@redhat.com>
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/config/manifests/bases/customized-user-remediation.clusterserviceversion.yaml
+++ b/config/manifests/bases/customized-user-remediation.clusterserviceversion.yaml
@@ -54,7 +54,7 @@ spec:
   - high-availability
   - baremetal
   - script
-  - CSR
+  - CUR
   links:
   - name: Customized Script Remediation
     url: https://customized-user-remediation.domain
