--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -243,7 +243,7 @@ spec:
   - high-availability
   - baremetal
   - script
-  - CSR
+  - CUR
   links:
   - name: Customized Script Remediation
     url: https://customized-user-remediation.domain
