adding job/pod permissions
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -29,6 +29,30 @@ spec:
       clusterPermissions:
       - rules:
         - apiGroups:
+          - ""
+          resources:
+          - pods
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - batch
+          resources:
+          - jobs
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
           - customized-user-remediation.medik8s.io
           resources:
           - customizeduserremediationconfigs
