--- a/config/samples/customized-user-remediation_v1alpha1_customizeduserremediationconfig.yaml
+++ b/config/samples/customized-user-remediation_v1alpha1_customizeduserremediationconfig.yaml
@@ -1,12 +1,6 @@
 apiVersion: customized-user-remediation.medik8s.io/v1alpha1
 kind: CustomizedScriptRemediationConfig
 metadata:
-  labels:
-    app.kubernetes.io/name: customizedscriptremediationconfig
-    app.kubernetes.io/instance: customizedscriptremediationconfig-sample
-    app.kubernetes.io/part-of: customized-user-remediation
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: customized-user-remediation
   name: customizedscriptremediationconfig-sample
 spec:
-  # TODO(user): Add fields here
+  script: touch /host-root/var/tmp/hello.txt
