--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -80,3 +80,11 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - security.openshift.io
+  resourceNames:
+  - privileged
+  resources:
+  - securitycontextconstraints
+  verbs:
+  - use
