adding suggested ns
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -5,6 +5,8 @@ metadata:
     alm-examples: '[]'
     capabilities: Basic Install
     createdAt: ""
+    operatorframework.io/suggested-namespace: openshift-workload-availability
+    operatorframework.io/suggested-namespace-template: '{"kind":"Namespace","apiVersion":"v1","metadata":{"name":"openshift-workload-availability","annotations":{"openshift.io/node-selector":""}}}'
     operators.operatorframework.io/builder: operator-sdk-v1.32.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
   name: customized-user-remediation.v0.0.1
