--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -211,6 +211,11 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
+                env:
+                - name: DEPLOYMENT_NAMESPACE
+                  valueFrom:
+                    fieldRef:
+                      fieldPath: metadata.namespace
                 image: quay.io/mshitrit/customized-user-remediation-operator:latest
                 livenessProbe:
                   httpGet:
