--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -81,6 +81,18 @@ rules:
   - patch
   - update
 - apiGroups:
+  - customized-user-remediation.medik8s.io
+  resources:
+  - customizeduserremediationtemplates
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - security.openshift.io
   resourceNames:
   - privileged
