Move script from config to remediation spec
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediations.yaml
+++ b/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediations.yaml
@@ -35,6 +35,11 @@ spec:
           spec:
             description: CustomizedUserRemediationSpec defines the desired state of
               CustomizedUserRemediation
+            properties:
+              script:
+                description: Script is a user defined bash script to be run in case
+                  of remediation.
+                type: string
             type: object
           status:
             description: CustomizedUserRemediationStatus defines the observed state
