--- a/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediationtemplates.yaml
+++ b/bundle/manifests/customized-user-remediation.medik8s.io_customizeduserremediationtemplates.yaml
@@ -42,6 +42,11 @@ spec:
                   spec:
                     description: CustomizedUserRemediationSpec defines the desired
                       state of CustomizedUserRemediation
+                    properties:
+                      script:
+                        description: Script is a user defined bash script to be run
+                          in case of remediation.
+                        type: string
                     type: object
                 required:
                 - spec
