Generate community version 0.1.0
VERSION=0.1.0 make container-build-community container-push

Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: quay.io/medik8s/customized-user-remediation-operator
-  newTag: latest
+  newTag: v0.1.0
