--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -35,12 +35,12 @@ metadata:
         }
       ]
     capabilities: Basic Install
-    createdAt: ""
+    createdAt: "2024-03-25T12:46:54Z"
     operatorframework.io/suggested-namespace: openshift-workload-availability
     operatorframework.io/suggested-namespace-template: '{"kind":"Namespace","apiVersion":"v1","metadata":{"name":"openshift-workload-availability","annotations":{"openshift.io/node-selector":""}}}'
     operators.operatorframework.io/builder: operator-sdk-v1.32.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
-  name: customized-user-remediation.v0.0.1
+  name: customized-user-remediation.v0.1.0
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -69,7 +69,7 @@ spec:
         path: template
       version: v1alpha1
   description: TBD
-  displayName: Customized User Remediation Operator
+  displayName: Customized User Remediation Operator - Community Edition
   install:
     spec:
       clusterPermissions:
@@ -257,7 +257,7 @@ spec:
                   valueFrom:
                     fieldRef:
                       fieldPath: metadata.namespace
-                image: quay.io/medik8s/customized-user-remediation-operator:latest
+                image: quay.io/medik8s/customized-user-remediation-operator:v0.1.0
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -350,7 +350,7 @@ spec:
   provider:
     name: Medik8s
     url: https://www.medik8s.io/
-  version: 0.0.1
+  version: 0.1.0
   webhookdefinitions:
   - admissionReviewVersions:
     - v1
