Add missing container image
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -36,6 +36,7 @@ metadata:
       ]
     capabilities: Basic Install
     categories: OpenShift Optional
+    containerImage: ""
     createdAt: ""
     operatorframework.io/suggested-namespace: openshift-workload-availability
     operatorframework.io/suggested-namespace-template: '{"kind":"Namespace","apiVersion":"v1","metadata":{"name":"openshift-workload-availability","annotations":{"openshift.io/node-selector":""}}}'
