--- a/config/manifests/bases/customized-user-remediation.clusterserviceversion.yaml
+++ b/config/manifests/bases/customized-user-remediation.clusterserviceversion.yaml
@@ -5,6 +5,7 @@ metadata:
     alm-examples: '[]'
     capabilities: Basic Install
     categories: OpenShift Optional
+    containerImage: ""
     operatorframework.io/suggested-namespace: openshift-workload-availability
     operatorframework.io/suggested-namespace-template: '{"kind":"Namespace","apiVersion":"v1","metadata":{"name":"openshift-workload-availability","annotations":{"openshift.io/node-selector":""}}}'
   name: customized-user-remediation.v0.0.0
