add missing CSV fields for OKD release
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -38,10 +38,16 @@ metadata:
     categories: OpenShift Optional
     containerImage: ""
     createdAt: ""
+    description: Customized-user-remediation works with Node Health Check to remediate
+      unhealthy nodes by running a user customized script on the unhealthy node. This
+      operator does not preform any fencing on the remediated node so users should
+      be careful with the scripts that are being used.
     operatorframework.io/suggested-namespace: openshift-workload-availability
     operatorframework.io/suggested-namespace-template: '{"kind":"Namespace","apiVersion":"v1","metadata":{"name":"openshift-workload-availability","annotations":{"openshift.io/node-selector":""}}}'
     operators.operatorframework.io/builder: operator-sdk-v1.32.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
+    repository: https://github.com/medik8s/customized-user-remediation
+    support: Medik8s
   name: customized-user-remediation.v0.0.1
   namespace: placeholder
 spec:
