Add more keywords to CSV
Signed-off-by: Michael Shitrit <mshitrit@redhat.com>

--- a/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
+++ b/bundle/manifests/customized-user-remediation.clusterserviceversion.yaml
@@ -362,6 +362,8 @@ spec:
   - baremetal
   - script
   - CUR
+  - customized-user-remediation
+  - Medik8s
   links:
   - name: Customized User Remediation
     url: https://customized-user-remediation.domain
