--- a/config/manifests/bases/customized-user-remediation.clusterserviceversion.yaml
+++ b/config/manifests/bases/customized-user-remediation.clusterserviceversion.yaml
@@ -80,6 +80,8 @@ spec:
   - baremetal
   - script
   - CUR
+  - customized-user-remediation
+  - Medik8s
   links:
   - name: Customized User Remediation
     url: https://customized-user-remediation.domain
